# DissectX

./: .dissectx_annotations.json  .dockerignore  .gitignore  Dockerfile  FIXES_APPLIED.md  LICENSE  MANIFEST.in  README.md  bininst1_analysis.md  decode_helper.py  demo_binary_analysis.py  demo_formatter.py  demo_hex_symbols.py  demo_security.py  dissectx  dissectx_to_ida.py  docker-compose.yml  ida_export_to_json.py  ls_rop.py  main.py  pyproject.toml  pytest.ini  reproduce_fix.py  requirements-linux.txt  requirements-macos.txt  requirements-windows.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  CTF_WALKTHROUGHS.md  ERROR_HANDLING.md  PACKAGING_GUIDE.md  PLATFORM_COMPATIBILITY.md  PLUGIN_DEVELOPMENT.md  WEB_INTERFACE_FLOW.md  WEB_UI_GUIDE.md
plugins/: README.md  __init__.py  example_analyzer_plugin.py  example_format_plugin.py
scripts/: bump_version.py
src/: __init__.py  __version__.py  advanced_detector.py  analyzer.py  architecture.py  architecture_detector.py  architecture_example.py  binary_analyzer.py  binary_differ.py  call_graph_generator.py  capstone_disassembler.py  cfg_generator.py  decompiler.py  error_handling.py  format_detector.py  formatter.py  input_handler.py  models.py  parser.py  rop_analyzer.py  security_highlighter.py  translator.py  xref_analyzer.py
src/demos/: __init__.py  demo_advanced_detection.py  demo_binary_analysis.py  demo_emulation.py  demo_formatter.py  demo_hex_symbols.py  demo_memory_analysis.py  demo_security.py
src/detectors/: __init__.py  anti_analysis_detector.py  api_hash_resolver.py  checksec_detector.py  flag_detector.py  flag_finder.py  junk_detector.py  shellcode_detector.py  syscall_detector.py  vulnerability_detector.py  xor_analyzer.py
src/emulation/: __init__.py  string_decryptor.py  unicorn_emulator.py
src/exploitation/: auto_exploiter.py  auto_exploiter_strategies.py  bad_byte_detector.py  format_string_exploiter.py  payload_encoder.py  polymorphic_engine.py  rop_engine.py  vulnerability_scanner.py
src/integrations/: __init__.py  ghidra_integration.py  ida_integration.py  naming_conventions.py  radare2_integration.py
src/pe/: __init__.py  memory_dump_analyzer.py  memory_parser.py
src/plugins/: __init__.py  plugin_manager.py
src/tui/: README.md  __init__.py  tui_app.py
src/utils/: __init__.py  cipher_tools.py  hash_identifier.py  image_forensics.py  pattern_tools.py  rsa_tools.py  shellcode_manager.py  steg_lsb.py  xor_tools.py
src/web/: README.md  __init__.py  server.py
src/web/templates/: advanced_analysis.html  analysis.html  base.html  cyberchef.html  error.html  exploitation.html  function_detail.html  functions.html  graph.html  index.html  recent_scans.html  scan_detail.html  strings.html  tools.html  xrefs.html  (+2 more)
(+2 files in other folders)
