[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dissectx"
dynamic = ["version"]
description = "   Binary Analysis & Reverse Engineering Framework"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "DissectX Contributors", email = "dissectx@example.com"}
]
keywords = ["ctf", "reverse-engineering", "disassembly", "assembly", "binary-analysis", "security", "malware-analysis", "decompiler"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Disassemblers",
    "Topic :: Software Development :: Debuggers",
]

dependencies = [
    "capstone>=5.0.0",
    "pefile>=2023.2.7",
    "networkx>=3.0",
    "unicorn>=2.0.0",
    "textual>=0.41.0",
    "flask>=3.0.0",
    "weasyprint>=60.0",
    "ROPGadget>=7.4",
    "r2pipe>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.82.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/H4D3ZS/DissectX"
Documentation = "https://github.com/H4D3ZS/DissectX/blob/main/README.md"
Repository = "https://github.com/H4D3ZS/DissectX"
"Bug Tracker" = "https://github.com/H4D3ZS/DissectX/issues"

[project.scripts]
dissectx = "main:main"

[tool.setuptools]
packages = ["src", "plugins"]

[tool.setuptools.dynamic]
version = {attr = "src.__version__.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
